// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers activityReducer should handle ADD_FILTER 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`reducers activityReducer should handle CHANGE_FILTER 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "activityLoadingError": null,
    "errorDialogDetails": null,
    "filter": Set {
-     "SENT_ACTIVITY",
      "RECEIVED_ACTIVITY",
      "PENDING_ACTIVITY",
      "EXPIRED_ACTIVITY",
      "INTERNAL_ACTIVITY",
    },
    "filters": Array [
      Object {
        "key": "SENT_ACTIVITY",
      },
      Object {
        "key": "RECEIVED_ACTIVITY",
      },
      Object {
        "key": "PENDING_ACTIVITY",
      },
      Object {
        "key": "EXPIRED_ACTIVITY",
      },
      Object {
        "key": "INTERNAL_ACTIVITY",
      },
    ],
    "hasNextPage": true,
    "isActivityLoading": false,
    "modal": Object {
      "itemId": null,
      "itemType": null,
    },
    "searchText": null,
  }
`;

exports[`reducers activityReducer should handle FETCH_ACTIVITY_HISTORY 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "activityLoadingError": null,
    "errorDialogDetails": null,
    "filter": Set {
      "SENT_ACTIVITY",
      "RECEIVED_ACTIVITY",
      "PENDING_ACTIVITY",
      "EXPIRED_ACTIVITY",
      "INTERNAL_ACTIVITY",
    },
    "filters": Array [
      Object {
        "key": "SENT_ACTIVITY",
      },
      Object {
        "key": "RECEIVED_ACTIVITY",
      },
      Object {
        "key": "PENDING_ACTIVITY",
      },
      Object {
        "key": "EXPIRED_ACTIVITY",
      },
      Object {
        "key": "INTERNAL_ACTIVITY",
      },
    ],
    "hasNextPage": true,
-   "isActivityLoading": false,
+   "isActivityLoading": true,
    "modal": Object {
      "itemId": null,
      "itemType": null,
    },
    "searchText": null,
  }
`;

exports[`reducers activityReducer should handle FETCH_ACTIVITY_HISTORY_FAILURE 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
-   "activityLoadingError": null,
+   "activityLoadingError": "some error",
    "errorDialogDetails": null,
    "filter": Set {
      "SENT_ACTIVITY",
      "RECEIVED_ACTIVITY",
      "PENDING_ACTIVITY",
      "EXPIRED_ACTIVITY",
      "INTERNAL_ACTIVITY",
    },
    "filters": Array [
      Object {
        "key": "SENT_ACTIVITY",
      },
      Object {
        "key": "RECEIVED_ACTIVITY",
      },
      Object {
        "key": "PENDING_ACTIVITY",
      },
      Object {
        "key": "EXPIRED_ACTIVITY",
      },
      Object {
        "key": "INTERNAL_ACTIVITY",
      },
    ],
    "hasNextPage": true,
    "isActivityLoading": false,
    "modal": Object {
      "itemId": null,
      "itemType": null,
    },
    "searchText": null,
  }
`;

exports[`reducers activityReducer should handle FETCH_ACTIVITY_HISTORY_SUCCESS 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`reducers activityReducer should handle HIDE_ACTIVITY_MODAL 1`] = `
Snapshot Diff:
Compared values have no visual difference.
`;

exports[`reducers activityReducer should handle SET_HAS_NEXT_PAGE 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "activityLoadingError": null,
    "errorDialogDetails": null,
    "filter": Set {
      "SENT_ACTIVITY",
      "RECEIVED_ACTIVITY",
      "PENDING_ACTIVITY",
      "EXPIRED_ACTIVITY",
      "INTERNAL_ACTIVITY",
    },
    "filters": Array [
      Object {
        "key": "SENT_ACTIVITY",
      },
      Object {
        "key": "RECEIVED_ACTIVITY",
      },
      Object {
        "key": "PENDING_ACTIVITY",
      },
      Object {
        "key": "EXPIRED_ACTIVITY",
      },
      Object {
        "key": "INTERNAL_ACTIVITY",
      },
    ],
-   "hasNextPage": true,
+   "hasNextPage": undefined,
    "isActivityLoading": false,
    "modal": Object {
      "itemId": null,
      "itemType": null,
    },
    "searchText": null,
  }
`;

exports[`reducers activityReducer should handle SHOW_ACTIVITY_MODAL 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "activityLoadingError": null,
    "errorDialogDetails": null,
    "filter": Set {
      "SENT_ACTIVITY",
      "RECEIVED_ACTIVITY",
      "PENDING_ACTIVITY",
      "EXPIRED_ACTIVITY",
      "INTERNAL_ACTIVITY",
    },
    "filters": Array [
      Object {
        "key": "SENT_ACTIVITY",
      },
      Object {
        "key": "RECEIVED_ACTIVITY",
      },
      Object {
        "key": "PENDING_ACTIVITY",
      },
      Object {
        "key": "EXPIRED_ACTIVITY",
      },
      Object {
        "key": "INTERNAL_ACTIVITY",
      },
    ],
    "hasNextPage": true,
    "isActivityLoading": false,
    "modal": Object {
-     "itemId": null,
-     "itemType": null,
+     "itemId": "123",
+     "itemType": "transaction",
    },
    "searchText": null,
  }
`;

exports[`reducers activityReducer should handle UPDATE_SEARCH_TEXT 1`] = `
Snapshot Diff:
- First value
+ Second value

  Object {
    "activityLoadingError": null,
    "errorDialogDetails": null,
    "filter": Set {
      "SENT_ACTIVITY",
      "RECEIVED_ACTIVITY",
      "PENDING_ACTIVITY",
      "EXPIRED_ACTIVITY",
      "INTERNAL_ACTIVITY",
    },
    "filters": Array [
      Object {
        "key": "SENT_ACTIVITY",
      },
      Object {
        "key": "RECEIVED_ACTIVITY",
      },
      Object {
        "key": "PENDING_ACTIVITY",
      },
      Object {
        "key": "EXPIRED_ACTIVITY",
      },
      Object {
        "key": "INTERNAL_ACTIVITY",
      },
    ],
    "hasNextPage": true,
    "isActivityLoading": false,
    "modal": Object {
      "itemId": null,
      "itemType": null,
    },
-   "searchText": null,
+   "searchText": "some text",
  }
`;
